# robot_task

./: .gitignore  AGENTS.md  CodeGenSpec.md  LLM_ROBOT_HTTP_PROTOCOL.md  MainSimProcess.md  README.md  main.py  prompt-EN.yaml  tasks_en.yaml
llm_decision_making/: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
llm_decision_making/config/: Task_Draft.md  __init__.py  llm_config.py  main_config.py  perception_config.py  robot_config.py  run_logging_config.py  task_parser_config.py  tasks_en.yaml
llm_decision_making/docs/: 决策和机器人接口文档.md
llm_decision_making/modules/: __init__.py  perception_client.py  policy_executor.py  policy_model.py  pose_transformer.py  robot_client.py  schemas.py  task_loader.py  task_parser.py
llm_decision_making/tasks/: tasks_en.yaml
llm_decision_making/tests/: test_llm_client.py  test_main.py  test_perception_client.py  test_robot_client.py  test_run_logging.py  test_schemas.py  test_task_loader.py  test_task_parser.py  test_yaml_loader.py
llm_decision_making/utils/: llm_client.py  perception_client.py  perception_schemas.py  robot_client.py  robot_schemas.py  run_logging.py  yaml_loader.py
robot_service/: AGENTS.md  MainSimProcess.md  README.md  pyproject.toml  worker_main.py
robot_service/api/: app.py  manager.py
robot_service/common/: messages.py  schemas.py
robot_service/docs/: test_checklist.md  worker_design.md
robot_service/runtime/: __init__.py  ids.py  logging_config.py  paths.py  settings.py  worker_runtime.py
robot_service/scenes/: __init__.py  base_environment.py  desktop_scene_blocks.py  scene_specs.py  (+1 more)
(+140 files in other folders)
