[project]
name = "robot-service"
version = "0.1.0"
description = "Single-session robot service skeleton for Isaac Sim."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
